# sftpmock

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  sftpmock.py  sftpmock_pysftp.py  tests.py
.github/workflows/: test.yml
sftpmock/: __init__.py  server.py  sftpmock.py
